--- a/college_predictor_frontend/index.html
+++ b/college_predictor_frontend/index.html
@@ -26,7 +26,7 @@
     <body>
         <h1>Welcome to College Predictor</h1>
         <p><b>Select your exam type :</b></p>
-        <button onclick="selectexam('tg')">TG EAMCET</button>
+        <a><button onclick="selectexam('tg')">TG EAMCET</button></a>
         <button onclick="selectexam('ap')">AP EAMCET</button>
         <script>
             function selectexam(examtype){
