--- a/college_predictor_frontend/index.html
+++ b/college_predictor_frontend/index.html
@@ -1,37 +1,176 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>EAMCET College Predictor</title>
-        <style>
-            body{
-                text-align: center;
-                background-color: aliceblue;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            button{
-                padding: 10px 20px;
-                margin: 10px;
-                font-size: 16px;
-                background-color: #007bff;
-                color: white;
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-            }
-            button:hover{
-                background-color: #0056b3;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Welcome to College Predictor</h1>
-        <p><b>Select your exam type :</b></p>
-        <a><button onclick="selectexam('tg')">TG EAMCET</button></a>
-        <button onclick="selectexam('ap')">AP EAMCET</button>
-        <script>
-            function selectexam(examtype){
-                alert("You selected : " + examtype.toUpperCase())
-            }
-        </script>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EAMCET College Predictor</title>
+  <link rel="icon" href="logo.jpg" type="image/x-icon" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      color: #1a237e;
+    }
+
+    .container {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    .inner-box {
+      background-color: #ffffff;
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    h1 {
+      font-size: 1.9rem;
+      margin-bottom: 1rem;
+      color: #0d47a1;
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+      color: #333;
+    }
+
+    .button-group {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .predictor-link {
+      text-decoration: none;
+      color: white;
+      background: linear-gradient(135deg, #1e88e5, #1565c0);
+      padding: 14px 0;
+      border-radius: 12px;
+      font-weight: bold;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+      box-shadow: 0 6px 15px rgba(21, 101, 192, 0.4);
+    }
+
+    .predictor-link:hover {
+      transform: scale(1.05);
+      background: linear-gradient(135deg, #1565c0, #0d47a1);
+      box-shadow: 0 8px 20px rgba(13, 71, 161, 0.5);
+    }
+
+    footer {
+      background: #1a237e;
+      color: #e3f2fd;
+      text-align: center;
+      padding: 1.2rem;
+      font-size: 0.95rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
+      border-top: 3px solid #3949ab;
+    }
+
+    footer a {
+      color: #bbdefb;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      transition: all 0.3s ease;
+    }
+
+    footer a:hover {
+      color: #e8f0fe;
+      transform: scale(1.1);
+    }
+
+    footer svg {
+      width: 18px;
+      height: 18px;
+      fill: #bbdefb;
+    }
+
+    footer a:hover svg {
+      fill: #e8f0fe;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 480px) {
+      .inner-box {
+        padding: 1.5rem 1rem;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      .predictor-link {
+        font-size: 0.95rem;
+        padding: 12px 0;
+      }
+
+      footer {
+        font-size: 0.85rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="inner-box">
+      <h1>🎓 EAMCET College Predictor</h1>
+      <p><strong>Select your exam to begin prediction:</strong></p>
+      <div class="button-group">
+        <a class="predictor-link" href="tg_form.html">🌐 TG EAPCET</a>
+        <a class="predictor-link" href="ap_form.html">🌐 AP EAMCET</a>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <span>👨‍💻 Designed by Jathin Pusuluri</span>
+    <a href="https://www.linkedin.com/in/jathin-pusuluri021/" target="_blank" aria-label="LinkedIn">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.8 0-5 2.22-5 5v14c0 2.8 2.2 5 5 5h14c2.8 0 5-2.2 5-5v-14c0-2.8-2.2-5-5-5zm-11.33 19h-3v-10h3v10zm-1.5-11.33c-1.1 0-2-.9-2-2s.9-2 2-2c1.1 0 2 .9 2 2s-.91 2-2 2zm13.83 11.33h-3v-5.5c0-1.3-.02-3-1.83-3-1.83 0-2.11 1.43-2.11 2.91v5.59h-3v-10h2.89v1.35h.04c.4-.76 1.37-1.56 2.82-1.56 3.02 0 3.58 1.98 3.58 4.56v5.65z"/></svg>
+      LinkedIn
+    </a>
+    <a href="mailto:p.jathin021@gmail.com" aria-label="Email">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 4a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4zm2 0v1.327l7 4.667 7-4.667V4H4zm0 3.14v12.86h16V7.14l-8 5.333-8-5.332z"/></svg>
+      Email
+    </a>
+  </footer>
+</body>
 </html>
