--- a/college_predictor_frontend/tg_form.html
+++ b/college_predictor_frontend/tg_form.html
@@ -270,7 +270,7 @@
   // Wait 5 seconds before fetching results
   await new Promise(resolve => setTimeout(resolve, 5000));
 
-  const response = await fetch("http://localhost:8000/api/predict-colleges", {
+   fetch("https://college-predictor-backend.onrender.com/api/predict-colleges", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
