Ready for deployment

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
       <h1>🎓 EAMCET College Predictor</h1>
       <p><strong>Select your exam to begin prediction:</strong></p>
       <div class="button-group">
-        <a class="predictor-link" href="tg_form.html">🌐 TG EAPCET</a>
-        <a class="predictor-link" href="ap_form.html">🌐 AP EAMCET</a>
+        <a class="predictor-link" href="college_predictor_frontend/tg_form.html">🌐 TG EAPCET</a>
+        <a class="predictor-link" href="college_predictor_frontend/ap_form.html">🌐 AP EAMCET</a>
       </div>
     </div>
   </div>
