--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EAMCET College Predictor</title>
-  <link rel="icon" href="logo.jpg" type="image/x-icon" />
+  <link rel="icon" href="college_predictor_frontend/logo.jpg" type="image/x-icon" />
   <style>
     * {
       margin: 0;
